Fix compilation/precommit